# ulauncher-pop

./: .gitignore  .pdm-python  README.md  flake.nix  pyproject.toml
data/themes/: adwaita.css
scripts/: prepare-data.sh
ulauncher/: __init__.py  config.py  main.py  paths.py
ulauncher/api/: extension.py  result.py
ulauncher/modes/: BaseMode.py  PopLauncher.py
ulauncher/modes/apps/: AppResult.py  launch_app.py
ulauncher/modes/extensions/: DeferredResultRenderer.py  ExtensionController.py  ExtensionRuntime.py  ExtensionSocketServer.py  extension_finder.py
ulauncher/modes/poplauncher/: jsonproto.py  poplauncher_ipc.py  result.py
ulauncher/ui/: ItemNavigation.py  LayerShell.py  ResultWidget.py  UlauncherApp.py  preferences_server.py
ulauncher/ui/windows/: HotkeyDialog.py  UlauncherWindow.py
ulauncher/utils/: Settings.py  Theme.py  fuzzy_search.py  get_icon_path.py  hotkey_controller.py  launch_detached.py  load_icon_surface.py  migrate.py  text_highlighter.py  version.py  wm.py
